--- a/elibrary-controller/src/main/resources/templates/fragments/subscriptionUpdateModal.html
+++ b/elibrary-controller/src/main/resources/templates/fragments/subscriptionUpdateModal.html
@@ -5,13 +5,14 @@
 <body>
 
 <!--/*@thymesVar id="thisSubscription" type="by.it.academy.grodno.elibrary.api.dto.books.SubscriptionDto"*/-->
-<div th:fragment="subscriptionUpdateModal(thisSubscription)">
+<div th:fragment="subscriptionUpdateModal(thisSubscription)"
+     th:if="${!thisSubscription.getStatus().equalsIgnoreCase('completed')}">
     <!-- Button trigger modal - subscription -->
-    <div th:if="${!thisSubscription.getStatus().equalsIgnoreCase('completed')}">
-        <button type="button" class="btn btn-primary btn-sm mt-2"
-                data-bs-toggle="modal"
+        <button type="button" class="btn btn-secondary btn-sm" data-bs-toggle="modal"
                 th:attr="data-bs-target='#subscriptionUpdateForm' + ${thisSubscription.id}">
-            Change
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+                <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"></path>
+            </svg>
         </button>
 
         <!-- Modal -->
@@ -62,7 +63,6 @@
             </div>
         </div>
     </div>
-</div>
 </body>
 
 </html>
