--- a/elibrary-controller/src/main/resources/templates/fragments/subscriptionUpdateModal.html
+++ b/elibrary-controller/src/main/resources/templates/fragments/subscriptionUpdateModal.html
@@ -47,7 +47,7 @@
                                        th:value="10" required autofocus>
                                 <label for="subscriptionId" class="input-group-text visually-hidden">Id</label>
                                 <input type="text" id="subscriptionId" name="id" class="form-control visually-hidden"
-                                       th:value="${thisSubscription.bookDetails.id}" required>
+                                       th:value="${thisSubscription.id}" required>
                                 <select name="code" class="form-select" aria-label="request code">
                                     <option value="2" selected>Take book</option>
                                     <option value="3">Leave book</option>
