--- a/elibrary-controller/src/main/resources/templates/admin/adminSubscriptionList.html
+++ b/elibrary-controller/src/main/resources/templates/admin/adminSubscriptionList.html
@@ -37,6 +37,8 @@
         <div class="bd-content ps-lg-4">
             <form class="input-group mb-3" action="#" th:action="@{/admin/subscriptions/create}" method="post">
                 <div class="input-group mb-3">
+                    <label for="userId" class="input-group-text">User Id</label>
+                    <input type="number" id="userId" name="userId" class="form-control" placeholder="ID" required autofocus>
                     <label for="bookId" class="input-group-text">Book Id</label>
                     <input type="text" id="bookId" name="bookId" class="form-control" placeholder="ID" required autofocus>
                     <label for="count" class="input-group-text">Count</label>
