--- a/elibrary-controller/src/main/resources/templates/admin/adminSubscriptionList.html
+++ b/elibrary-controller/src/main/resources/templates/admin/adminSubscriptionList.html
@@ -48,6 +48,7 @@
                     <select name="code" class="form-select" aria-label="request code">
                         <option value="1" selected>Booking</option>
                         <option value="2">Take book</option>
+                        <option value="5">Undo booking</option>
                     </select>
                     <button class="btn btn-outline-primary" type="submit">Add</button>
                 </div>
